@@ -16,6 +16,7 @@
   - Fixed crash when hosting a QQuickWidget (#150)
   - Fixed CMake Visual Studio generator not working
   - Sidebar overlays now maintain their size when toggled (#155)
+  - Added DockWidget::setFloatingGeometry() (#144)
 
 * v1.2.1 (6 February 2021)
   - Support for resizing dock widgets when they are in overlay/popup mode (autohide/sidebar feature)
